2011/01/14 Till Straumann <strauman@slac.stanford.edu>
    - devGenVarApp/src/devGenVar.c, devGenVarApp/src/devGenVar.h:
      Added 'devGenVarInitScanPvt()', 'devGenVarLockRaw()',
      'devGenVarUnlockRaw()', 'devGenVarScan()'

    - ChangeLog: Added