@@ -1,3 +1,4 @@
+registrar(devGenVarRegistrar)
 device(ai,          VME_IO, devAiGenVar,    "GenVar")
 device(longin,      VME_IO, devLiGenVar,    "GenVar")
 device(bi,          VME_IO, devBiGenVar,    "GenVar")
