@@ -224,6 +224,12 @@ devGenVarScan(DevGenVar p)
 int
 devGenVarConfig(unsigned table_size);
 
+/* Initialize device-support module. This is
+ * to be used as the 'init' member in any DSET.
+ */
+long
+devGenVarInitDevSup(int pass);
+
 
 #ifdef __cplusplus
 }
